force-app/main/default/objects/Ticket__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>InProgress</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>SALY</fullName>
            </value>
            <value>
                <fullName>New - Onboarding</fullName>
            </value>
            <value>
                <fullName>Verification Needed</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Account Provisioned</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>New / QRE Review</fullName>
            </value>
            <value>
                <fullName>Finalize Portal</fullName>
            </value>
            <value>
                <fullName>Four Part Pending</fullName>
            </value>
            <value>
                <fullName>Onboard Review</fullName>
            </value>
            <value>
                <fullName>Data Load</fullName>
            </value>
            <value>
                <fullName>Report Creation</fullName>
            </value>
            <value>
                <fullName>Calc Approval Pending</fullName>
            </value>
            <value>
                <fullName>Customer Survey Pending</fullName>
            </value>
            <value>
                <fullName>Ready for Additional Qualitative</fullName>
            </value>
            <value>
                <fullName>Credit Determination</fullName>
            </value>
            <value>
                <fullName>Filed Tax Return Needed</fullName>
            </value>
            <value>
                <fullName>Tax Return - Needs Quant Team Review</fullName>
            </value>
            <value>
                <fullName>Load Credits</fullName>
            </value>
            <value>
                <fullName>Gusto Real Time Billing</fullName>
            </value>
            <value>
                <fullName>Payroll Billing (non-Gusto)</fullName>
            </value>
            <value>
                <fullName>Liability Billing - Annually</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Payment Plan</fullName>
            </value>
            <value>
                <fullName>Carryforward Credits</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>