force-app/main/default/objects/Ticket__c/fields/Steps_to_reproduce__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_reproduce__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Required for Bug issue types: Please list the steps to take to reproduce the problem</inlineHelpText>
    <label>Steps to reproduce</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>