force-app/main/default/objects/Ticket__c/fields/Sub_Team__c.field-meta.xml
<CustomField>
    <fullName>Sub_Team__c</fullName>
    <label>Sub Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Implementation Advocate</fullName>
            </value>
            <value>
                <fullName>Fulfillment</fullName>
            </value>
            <value>
                <fullName>Implementation Advocate - Amplifier</fullName>
            </value>
            <value>
                <fullName>Implementation Advocate - PE</fullName>
            </value>
            <value>
                <fullName>Qualifier</fullName>
            </value>
            <value>
                <fullName>Facilitator 1</fullName>
            </value>
            <value>
                <fullName>Facilitator 2</fullName>
            </value>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>