force-app/main/default/objects/Ticket__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>