force-app/main/default/objects/Ticket__c/fields/Switcher__c.field-meta.xml
<CustomField>
    <fullName>Switcher__c</fullName>
    <formula>Opportunity__r.Switcher__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Switcher</label>
    <type>Checkbox</type>
</CustomField>