force-app/main/default/objects/Ticket__c/fields/Tax_Year__c.field-meta.xml
<CustomField>
    <fullName>Tax_Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>