force-app/main/default/objects/Ticket__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Plans</fullName>
            </value>
            <value>
                <fullName>Renewals</fullName>
            </value>
            <value>
                <fullName>Member Processing</fullName>
            </value>
            <value>
                <fullName>New Plan Sales</fullName>
            </value>
            <value>
                <fullName>Benefits Care</fullName>
            </value>
            <value>
                <fullName>Full Stack Sales</fullName>
            </value>
            <value>
                <fullName>Benefits Advising</fullName>
            </value>
            <value>
                <fullName>Risk Assurance</fullName>
            </value>
            <value>
                <fullName>Tax Ops</fullName>
            </value>
            <value>
                <fullName>Benefits Compliance</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Benefits Transfer</fullName>
            </value>
            <value>
                <fullName>BoR Sales</fullName>
            </value>
            <value>
                <fullName>BYB Advocate</fullName>
            </value>
            <value>
                <fullName>BYB Member Ops</fullName>
            </value>
            <value>
                <fullName>Member Operations</fullName>
            </value>
            <value>
                <fullName>Mid Market Sales</fullName>
            </value>
            <value>
                <fullName>Partner Sales</fullName>
            </value>
            <value>
                <fullName>Small Business Sales</fullName>
            </value>
            <value>
                <fullName>Payroll Transfer</fullName>
            </value>
            <value>
                <fullName>UI Vendor Team</fullName>
            </value>
            <value>
                <fullName>Benefits Transfers</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Advising Fulfillment</fullName>
            </value>
            <value>
                <fullName>Benefits BYOB</fullName>
            </value>
            <value>
                <fullName>Partner Operations</fullName>
            </value>
            <value>
                <fullName>Escalations and Quality</fullName>
            </value>
            <value>
                <fullName>Legal Operations</fullName>
            </value>
            <value>
                <fullName>Member Fulfillment</fullName>
            </value>
            <value>
                <fullName>Payroll Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>