force-app/main/default/objects/Ticket__c/fields/Ticket_Creator_Role__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Creator_Role__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket Creator Role</label>
    <type>Text</type>
</CustomField>