force-app/main/default/objects/Ticket__c/fields/Ticket_Routed_Incorrectly__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Routed_Incorrectly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will allow the Member Ops team to validate if the ticket has been routed to correct team. User can check if routed incorrectly else take no action if routed correctly.</description>
    <label>Ticket Routed to Incorrect Team</label>
    <type>Checkbox</type>
</CustomField>