force-app/main/default/objects/Ticket__c/fields/Ticket_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Status_Change_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ticket Status Change Date</label>
    <type>DateTime</type>
</CustomField>