force-app/main/default/objects/Ticket__c/fields/Time_to_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Resolution__c</fullName>
    <formula>( Closed_Date_Time__c -  Assigned_to_User_At__c ) *24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Resolution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>