force-app/main/default/objects/Ticket__c/fields/Two_Factor_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Two_Factor_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Two-Factor Enabled?</label>
    <type>Checkbox</type>
</CustomField>