force-app/main/default/objects/Ticket__c/fields/Unresponsive__c.field-meta.xml
<CustomField>
    <fullName>Unresponsive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Represent the user is un-responsive for several days.</description>
    <label>Unresponsive</label>
    <type>Checkbox</type>
</CustomField>