force-app/main/default/objects/Ticket__c/fields/ZP_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>ZP_Company_ID__c</fullName>
    <description>Company ID from the Account</description>
    <formula>Account__r.ZP_Company_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZP Company ID</label>
    <type>Text</type>
</CustomField>