force-app/main/default/objects/Ticket__c/recordTypes/Benefits_Care.recordType-meta.xml
<RecordType>
    <fullName>Benefits_Care</fullName>
    <active>false</active>
    <description>Benefits Care</description>
    <label>Benefits Care</label>
</RecordType>