force-app/main/default/objects/Ticket__c/recordTypes/Credit_Collections.recordType-meta.xml
<RecordType>
    <fullName>Credit_Collections</fullName>
    <active>true</active>
    <description>Risk inquires regarding faster payroll, risk tolerance, recovery cases, wires, reverse wires, etc</description>
    <label>Credit &amp; Collections</label>
</RecordType>