force-app/main/default/objects/Ticket__c/recordTypes/Financial_Crimes_Operations.recordType-meta.xml
<RecordType>
    <fullName>Financial_Crimes_Operations</fullName>
    <active>true</active>
    <description>Risk inquires regarding onboarding RFIs, manual signatory verifications, bank verifications, etc</description>
    <label>Financial Crimes Operations</label>
</RecordType>