force-app/main/default/objects/Ticket__c/recordTypes/Risk_Assurance.recordType-meta.xml
<RecordType>
    <fullName>Risk_Assurance</fullName>
    <active>false</active>
    <description>Vitals</description>
    <label>Risk Assurance</label>
</RecordType>