force-app/main/default/objects/Ticket__c/recordTypes/Risk_Compliance.recordType-meta.xml
<RecordType>
    <fullName>Risk_Compliance</fullName>
    <active>true</active>
    <description>Risk inquires regarding account takeovers, suspicious activity, financial products, etc</description>
    <label>Risk Investigation</label>
</RecordType>