force-app/main/default/objects/Ticket__c/recordTypes/Tax_Ops.recordType-meta.xml
<RecordType>
    <fullName>Tax_Ops</fullName>
    <active>false</active>
    <description>Vitals</description>
    <label>Tax Ops</label>
</RecordType>