force-app/main/default/objects/Ticket__c/validationRules/Ben_Comp_Access_Link_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>Ben_Comp_Access_Link_Req</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Escalation_Reason__c, &quot;Access&quot;),
ISBLANK( Access_Link__c )
)</errorConditionFormula>
    <errorDisplayField>Access_Link__c</errorDisplayField>
    <errorMessage>Link to requested access required</errorMessage>
</ValidationRule>