force-app/main/default/objects/Ticket__c/validationRules/Ben_Comp_Con_Reimbursement_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>Ben_Comp_Con_Reimbursement_Create</fullName>
    <active>true</active>
    <description>Error Origin Date, Carrier, and States are required when submitting Concession/ Reimbursement ticket.</description>
    <errorConditionFormula>( RecordType.Name = &apos;Benefits Compliance&apos; &amp;&amp;
  ISPICKVAL(Escalation_Reason__c, &apos;Concession/Reimbursement&apos;)
  ) &amp;&amp;
( ISBLANK(Error_Origin_Date__c) ||
  ISBLANK(Carrier__c) ||
  ISBLANK(States__c)
)</errorConditionFormula>
    <errorMessage>Required fields: Error Origin Date, Carrier Name, and Carrier State</errorMessage>
</ValidationRule>