force-app/main/default/objects/Ticket__c/validationRules/Ben_Comp_Concession_Closure.validationRule-meta.xml
<ValidationRule>
    <fullName>Ben_Comp_Concession_Closure</fullName>
    <active>true</active>
    <description>Validate that all necessary Concession/ Reimbursement fields are filled out before a ticket is closed.</description>
    <errorConditionFormula>AND(
 RecordType.Name = &apos;Benefits Compliance&apos;,
 ISPICKVAL(Escalation_Reason__c, &quot;Concession/Reimbursement&quot;),
 ISCHANGED( Status__c ),
 ISPICKVAL(Status__c, &quot;Closed&quot;),
OR(
 ISBLANK( Reimbursement_Amount_Approved__c ),
 ISBLANK( Discount_Amount_Approved__c ),
 ISBLANK( Number_of_Discounted_Months_Approved__c ),
 ISPICKVAL( Reporting_Team__c,&quot;&quot; ),
 ISBLANK( Rationale__c ),
 ISPICKVAL( Error_Origin__c,&quot;&quot;) 
)
)</errorConditionFormula>
    <errorMessage>Reimbursement amount, discount months, or discount amount approved is required (put 0 if none applicable). Reporting Team, rationale, and error origin also required.</errorMessage>
</ValidationRule>