force-app/main/default/objects/Ticket__c/validationRules/Ben_Comp_Review_and_Research_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Ben_Comp_Review_and_Research_Creation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;New&quot;),
ISPICKVAL(Escalation_Reason__c, &quot;Research &amp; Review&quot;),
ISPICKVAL(Escalation_Reason_Detail__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Escalation_Reason_Detail__c</errorDisplayField>
    <errorMessage>Escalation Reason Detail is required.</errorMessage>
</ValidationRule>