force-app/main/default/objects/Ticket__c/validationRules/Benefit_Compliance_Claims_appeal.validationRule-meta.xml
<ValidationRule>
    <fullName>Benefit_Compliance_Claims_appeal</fullName>
    <active>true</active>
    <description>Require &quot;Is this a claims appeal request?&quot; field when User creates a benefits compliance ticket with &apos;QSEHRA&apos; or &apos;TAdAs&apos;Ticket Reason Details.</description>
    <errorConditionFormula>RecordType.Name = &apos;Benefits Compliance&apos; &amp;&amp;
ISNEW() &amp;&amp;
ISPICKVAL( Is_this_a_claims_appeal_request__c, &apos;&apos;) &amp;&amp;
( ISPICKVAL( Escalation_Reason_Detail__c, &apos;QSEHRA&apos; ) ||
  ISPICKVAL( Escalation_Reason_Detail__c, &apos;TAdAs&apos;  )
)</errorConditionFormula>
    <errorDisplayField>Is_this_a_claims_appeal_request__c</errorDisplayField>
    <errorMessage>Please &quot;Is this a claims appeal request?&quot; before submitting ticket.</errorMessage>
</ValidationRule>