force-app/main/default/objects/Ticket__c/validationRules/MF_Account_Carrier_Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>MF_Account_Carrier_Description_Required</fullName>
    <active>true</active>
    <description>Member Fulfillment Tickets - Required fields - Account, Carrier and Description</description>
    <errorConditionFormula>AND(
NOT($User.Exempt_from_Validation_Rules__c),
RecordType.DeveloperName=&apos;Member_Fulfillment&apos;,
OR(
ISBLANK(Carrier__c),
ISBLANK(Description__c)
)
)</errorConditionFormula>
    <errorMessage>Account, Carrier and Description are required fields for Member Fulfillment Tickets</errorMessage>
</ValidationRule>