force-app/main/default/objects/Ticket__c/validationRules/Rate_Discrepancy_Ticket_Enhancements.validationRule-meta.xml
<ValidationRule>
    <fullName>Rate_Discrepancy_Ticket_Enhancements</fullName>
    <active>true</active>
    <description>Cause of Premium Error and Error Origin are required to close Rate Discrepancy ticket</description>
    <errorConditionFormula>AND(
OR(
$RecordType.Name = &quot;Benefits Onboarding NewPlans&quot;,
$RecordType.Name = &quot;Benefits Onboarding Renewals&quot;
),
ISPICKVAL(Escalation_Reason__c, &quot;Rate Discrepancy&quot;),
ISPICKVAL(Status__c, &quot;Closed&quot;),
OR(
ISBLANK(Rate_Discrepancy_Resolution_Method__c),
Ispickval(Error_Origin__c,&apos;&apos;)
)
)</errorConditionFormula>
    <errorMessage>Cause of Premium Error and Error Origin are required to close Rate Discrepancy ticket</errorMessage>
</ValidationRule>