force-app/main/default/objects/Ticket__c/validationRules/Renewals_Cant_Edit_Assign_at_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Renewals_Cant_Edit_Assign_at_Creation</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Assign_to__c )</errorConditionFormula>
    <errorDisplayField>Assign_to__c</errorDisplayField>
    <errorMessage>Can&apos;t edit this field after ticket is created. Please update &apos;Owner&apos; field instead.</errorMessage>
</ValidationRule>