force-app/main/default/objects/Ticket__c/validationRules/Required_for_EQ_Queue_Tickets.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_for_EQ_Queue_Tickets</fullName>
    <active>true</active>
    <description>The Error Origin should be required field before tickets are closed in this EQ queue.</description>
    <errorConditionFormula>AND(
  OR(
    RecordType.DeveloperName == &apos;Member_Operations&apos;
  ),
  OR(
    AND(
      ISCHANGED(Status__c),
      ISPICKVAL(Status__c, &apos;Closed&apos;),
      ISPICKVAL(Error_Origin__c, &apos;&apos;)
    ),
    AND(
      ISPICKVAL(Status__c, &apos;Closed&apos;),
      ISPICKVAL(Error_Origin__c, &apos;&apos;)
    )
  )
)</errorConditionFormula>
    <errorMessage>The Error Origin field is required to close the ticket.</errorMessage>
</ValidationRule>