force-app/main/default/objects/Ticket__c/validationRules/Risk_ATO_Business_Disputes.validationRule-meta.xml
<ValidationRule>
    <fullName>Risk_ATO_Business_Disputes</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Escalation_Reason__c , &quot;Business Dispute&quot;),
ISBLANK( Additional_Comments__c ))</errorConditionFormula>
    <errorDisplayField>Additional_Comments__c</errorDisplayField>
    <errorMessage>Additional comments are required - please include all affected parties</errorMessage>
</ValidationRule>