force-app/main/default/objects/Ticket__c/validationRules/Risk_ATO_Two_Factor_Activity.validationRule-meta.xml
<ValidationRule>
    <fullName>Risk_ATO_Two_Factor_Activity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Escalation_Reason__c, &quot;Two-Factor Activity&quot;),
ISBLANK(User_Link__c)
)</errorConditionFormula>
    <errorDisplayField>User_Link__c</errorDisplayField>
    <errorMessage>User link is required</errorMessage>
</ValidationRule>