force-app/main/default/objects/Ticket__c/validationRules/Risk_IBV_Connection.validationRule-meta.xml
<ValidationRule>
    <fullName>Risk_IBV_Connection</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Escalation_Reason_Detail__c, &quot;IBV Connection&quot;),
NOT( Issues_Connecting_to_IBV__c),
NOT( Bank_Disconnection_Issue__c ))</errorConditionFormula>
    <errorMessage>Must mark either &apos;Issues Connecting to IBV&apos; or &apos;Bank Disconnection Issue&apos;</errorMessage>
</ValidationRule>