force-app/main/default/objects/Ticket__c/validationRules/Risk_Onboarding_RFI.validationRule-meta.xml
<ValidationRule>
    <fullName>Risk_Onboarding_RFI</fullName>
    <active>true</active>
    <description>Risk Ticket Reason = Payroll Blocker and Ticket Reason Detail = Onboarding RFI.</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Risk_Assurance&apos; &amp;&amp;
ISPICKVAL( Risk_Ticket_Reason__c, &apos;Payroll Blocker&apos;) &amp;&amp;
ISPICKVAL( Risk_Ticket_Reason_Detail__c, &apos;Onboarding RFI&apos;) &amp;&amp;
 The_admin_has_completed_the_RFI__c = FALSE</errorConditionFormula>
    <errorDisplayField>The_admin_has_completed_the_RFI__c</errorDisplayField>
    <errorMessage>Please click the (?) on the “RFI Pending” pill on the company’s Panda and confirm the Submission State is “Pending Review”.</errorMessage>
</ValidationRule>