force-app/main/default/objects/Ticket__c/validationRules/Risk_RFI_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Risk_RFI_Completed</fullName>
    <active>true</active>
    <description>Risk Assurance Ticket &quot;RFI completed &gt; 1-2 business days ago&quot; = FALSE.</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Risk_Assurance&apos; &amp;&amp;
ISPICKVAL( Risk_Ticket_Reason__c, &apos;Payroll Blocker&apos;) &amp;&amp;
ISPICKVAL( Risk_Ticket_Reason_Detail__c, &apos;Onboarding RFI&apos;) &amp;&amp;
 RFI_completed_1_2_business_days_ago__c = FALSE</errorConditionFormula>
    <errorDisplayField>RFI_completed_1_2_business_days_ago__c</errorDisplayField>
    <errorMessage>If the RFI was completed less than 1-2 business days ago, please allow the Risk Team to review the submission during their regular daily ops. All Onboarding RFIs are reviewed within 1-2 business days.</errorMessage>
</ValidationRule>