force-app/main/default/objects/Ticket__c/validationRules/Risk_Second_Pair_of_Eyes.validationRule-meta.xml
<ValidationRule>
    <fullName>Risk_Second_Pair_of_Eyes</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( ISPICKVAL(Escalation_Reason_Detail__c,&apos;Second Pair of Eyes&apos;),OR(ISBLANK( Payroll_Link__c), NOT( Bank_Screenshot_Attached__c)))</errorConditionFormula>
    <errorMessage>Must provide &apos;Payroll Link&apos; and mark &apos;Bank Screenshot Attached&apos;</errorMessage>
</ValidationRule>