force-app/main/default/objects/Ticket__c/validationRules/SE_Ticket_Resolution_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SE_Ticket_Resolution_Validation</fullName>
    <active>true</active>
    <description>Validation to check if resolution field is filled before updating ticket to resolved or closed.</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Solution_Engineer_Request&apos;,OR(ISPICKVAL( Status__c, &apos;Resolved&apos;),ISPICKVAL( Status__c, &apos;Closed&apos;)),  ISBLANK( Research_and_Resolution__c ) 
)</errorConditionFormula>
    <errorDisplayField>Research_and_Resolution__c</errorDisplayField>
    <errorMessage>Please fill the Research and Resolution field before updating status to Resolved or Closed.</errorMessage>
</ValidationRule>